--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.0",
+    "msw": "^1.1.0",
     "prettier": "^2.8.4"
   }
 }
